Updated to the latest version of cogcomp-nlp tools The corresponding `illinois-depparse` code can be found in my [Gitlab fork of the project](https://gitlab-beta.engr.illinois.edu/christod/illinois-depparse)

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
         	<groupId>edu.illinois.cs.cogcomp</groupId>
         	<artifactId>illinois-depparse</artifactId>
-        	<version>1.0.0-SNAPSHOT</version>
+        	<version>0.1.1</version>
         </dependency>
         <dependency>
         	<groupId>net.sf.trove4j</groupId>
