--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
         	<groupId>edu.illinois.cs.cogcomp</groupId>
         	<artifactId>illinois-depparse</artifactId>
-        	<version>0.1.2</version>
+        	<version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
         	<groupId>net.sf.trove4j</groupId>
